# corporate_services

./: CLAUDE.md  README.md  pyproject.toml
corporate_services/: hooks.py  modules.txt
corporate_services/api/: employee_turnover.py  import_coa.py  notifications.py  opportunity.py  opportunity_checklist_handlers.py  opportunity_handlers.py  setup_utils.py  staff_management.py  survey.py
corporate_services/api/candidates/: README.md  __init__.py  v1.py  v2.py
corporate_services/api/delete/: delete.py
corporate_services/dev/: lead_project.html
corporate_services/fixtures/: client_script.json  consultancy_fee.json  custom_docperm.json  custom_html_block.json  dashboard.json  dashboard_chart.json  department.json  designation.json  email_template.json  employee.json  general_employee.json  hr_settings.json  job_applicant.json  job_requisition.json  kpi_template_instructions.json  leave_application.json  leave_type.json  letter_head.json  navbar_settings.json  notification.json  number_card.json  performance_appraisal_rating_scale.json  performance_score_bands.json  portal_settings.json  print_format.json  report.json  role.json  role_profile.json  server_script.json  training_needs_analysis.json  travel_request.json  web_form.json  web_page.json  website_settings.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
corporate_services/overrides/: salary_slip.py
corporate_services/timesheet_submission_report/: timesheet_submission_report.js  timesheet_submission_report.json
corporate_services/www/: survey-public.html
(+812 files in other folders)
