[project]
name = "corporate_services"
authors = [
    { name = "ICL", email = "dev@intellisoftkenya.com"}
]
description = "IntelliSOFT Corporate Services ERPNext Customizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pandas>=1.3.0"  # Added pandas as a dependency.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
